# prototype

./: .gitignore  Cargo.toml  GPT.md  README.md  build.sh  clean.sh  diagram.json  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust_ci.yml
adapter/esp/: Cargo.toml
adapter/esp/.cargo/: config.toml
adapter/esp/src/: main.rs
adapter/std/: Cargo.toml
adapter/std/src/: main.rs
program/: Cargo.toml
program/src/: cache.rs  container.rs  executor.rs  lib.rs  main.rs  session.rs
program/src/fsm/: mod.rs  task_exec.rs
program/src/reactive/: iter.rs  maybe_dyn.rs  memos.rs  mod.rs  root.rs  state.rs
program/src/session/: cache.rs  events.rs  mod.rs  transfer.rs
protocol/: Cargo.toml
protocol/src/: config.rs  lib.rs
reactive/: Cargo.toml
reactive/src/: component.rs  context.rs  effect.rs  effects.rs  iter.rs  lib.rs  maybe_dyn.rs  node.rs  state.rs  track.rs
samples/esp/src/: container.rs
server/: Cargo.toml  build.rs
server/src/: dispatcher.rs  inspector.rs  lib.rs  loader.rs  main.rs  module.rs  task.rs
server/src/components/: mod.rs  module.rs  session.rs  task.rs
server/src/systems/: lifecycle.rs  mod.rs  network.rs  task.rs
server/tests/: basic_workflow.rs  multi_session.rs  workflow.rs
server/tests/common/: mock_client.rs  mock_server.rs  mod.rs
task/: Cargo.toml  build.rs  package-lock.json  package.json  rollup.config.js
task/assembly/: asconfig.json  index.html  package.json
task/assembly/src/: fiber.ts  fractal.ts
task/src/: fiber.js  fractal.js  lib.rs  render.js
