[workspace]
members = ["program", "protocol", "server"]
default-members = ["protocol", "server"]
resolver = "2"

[workspace.dependencies]
protocol.path = "./protocol"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package.program]
opt-level = "z"

[profile.release]
opt-level = 3
debug = false

[profile.release.package.program]
opt-level = "s"
