[package]
name = "program"
version = "0.1.0"
authors = ["Sieluna <seele.peng@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
bitvec = { version = "1", features = ["alloc"] }
bytes = { version = "1", default-features = false }
heapless = { version = "0.8", default-features = false }
log = "0.4"
protocol.workspace = true
thiserror = { version = "2", default-features = false }
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk" }

[features]
esp-idf = ["wamr-rust-sdk/esp-idf"]
