[package]
name = "program"
version = "0.1.0"
authors = ["Sieluna <seele.peng@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
bitvec = { version = "1", features = ["alloc"] }
bytes = { version = "1", default-features = false }
log = "0.4"
paste = "1"
protocol.workspace = true
slotmap = { version = "1", default-features = false }
spin = "0.10"
smallvec = { version = "1", features = ["union"] }
thiserror = { version = "2", default-features = false }
