[package]
name = "reactive"
version = "0.1.0"
authors = ["Sieluna <seele.peng@gmail.com>"]
edition = "2024"
resolver = "2"

[dependencies]
fnv = { version = "1", default-features = false }
hashbrown = "0.15"
indexmap = { version = "2", default-features = false }
wit-bindgen = { version = "0.41", optional = true }

[features]
ffi = []
wit = ["wit-bindgen"]
