[package]
name = "server"
version = "0.1.0"
authors = ["Sieluna <seele.peng@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
axum = "0.8"
bitvec = "1"
bytes = "1"
env_logger = "0.11"
futures = "0.3"
hecs = "0.10"
log = "0.4"
protocol.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
task.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
